--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "scripts": {
     "start": "ts-node fuse.ts dev",
+    "lint": "eslint --fix --ignore-path .gitignore --ext .js,.jsx,.ts,.tsx .",
     "build": "ts-node fuse.ts build",
     "build:prod": "ts-node fuse.ts build:prod",
     "build:dir": "ts-node fuse.ts build:dir"
@@ -28,9 +29,18 @@
     "typescript": "^3.7.5"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^2.18.0",
+    "@typescript-eslint/parser": "^2.18.0",
     "electron": "^7.1.10",
     "electron-builder": "^22.3.2",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.0",
+    "eslint-plugin-prettier": "^3.1.2",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.18.0",
     "fuse-box": "^4.0.0-next.165",
+    "prettier": "^1.19.1",
     "run-script-os": "^1.0.7",
     "ts-node": "^8.6.2",
     "tslib": "^1.10.0"
